button styles changed

--- a/src/styles/Area.css
+++ b/src/styles/Area.css
@@ -11,3 +11,23 @@
     left: 50%;
     transform: translate(-50%, -50%);
 }
+
+Input{
+    margin-top: 20px;
+    margin-left: 50%;
+    transform: translate(-50%, 0);
+}
+
+Button{
+    margin-top: 20px;
+    margin-left: 10px;
+    margin-right: 10px;
+}
+
+Button[name="send"]{
+    float: left;
+}
+
+Button[name="link"]{
+    float: right;
+}
