--- a/src/styles/Button.css
+++ b/src/styles/Button.css
@@ -1,11 +1,18 @@
 button{
-    margin-top: 20px;
-    margin-left: 50%;
-    transform: translate(-50%, 0);
     font-size: 16px;
     width: 30%;
     padding: 10px;
-    display: flex;
+    border-radius: 40px;
+    color:white;
+    background-color: #555555;
+    border: none;
     align-items: center;
     justify-content: center;
+}
+
+button:hover{
+    background-color: #2c2c2c;
+}
+button:active{
+    opacity: 0.8;
 }
