--- a/src/styles/Button.css
+++ b/src/styles/Button.css
@@ -1,7 +1,7 @@
 button{
     font-size: 16px;
-    width: 30%;
-    padding: 10px;
+    width: 126px;
+    padding: 10px 10px;
     border-radius: 40px;
     color:white;
     background-color: #555555;
