--- a/src/styles/Input.css
+++ b/src/styles/Input.css
@@ -1,12 +1,12 @@
 input{
-    width: 60%;
+    width: 250px;
     font-family: 'Times New Roman', Times, serif;
     font-size: 20px;
-    padding: 11px;
+    padding: 12px;
     display: flex;
     display: inline-block;
     border: none;
     background: #f1f1f1;
-    opacity: 0.9;
+    opacity: 0.8;
 }
 
