--- a/src/styles/Area.css
+++ b/src/styles/Area.css
@@ -2,23 +2,12 @@
     width: 100%;
     height: 100%;
     position: absolute;
-}
-
-.Block{
-    position: absolute;
+    display: flex;
     align-items: center;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    justify-content: center;
 }
 
-.AuthInput{
-    margin-top: 20px;
-    margin-left: 50%;
-    transform: translate(-50%, 0);
-}
-
-.AuthButt{
+.AuthInput, .AuthButt{
     margin-top: 20px;
 }
 
