--- a/src/styles/Area.css
+++ b/src/styles/Area.css
@@ -1,22 +1,28 @@
-.Area{
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+.mat-Input{
+    width: 250px;
 }
 
-.AuthInput, .AuthButt{
-    margin-top: 20px;
+.mat-Button{
+    width: 125px;
 }
 
-.AuthButt[name = "submit"]{
-    float: left;
-    margin-left: 46px;
+.margin{
+    margin-top: 26px;
 }
 
-.AuthButt[name = "link"]{
-    float: right;
-    margin-right: 46px;
+.icon{
+    width: 30px;
+}
+
+.custom{
+    color: #ffffff;
+    background-color: #555555;
+}
+
+.custom[color="custom"]:hover{
+    background-color: #414141;
+}
+
+.custom[color="custom"]:disabled{
+    background-color: #949494;
 }
