--- a/src/components/background/background.css
+++ b/src/components/background/background.css
@@ -1,10 +1,7 @@
 .background{
-    display: flex;
-    flex-flow: column wrap;
-    align-items: center;
-    justify-content: center;
     width: 100%;
     height: 100%;
-    position: absolute;
+    position: fixed;
     background-color: #f0f0f0;
+    overflow-y:scroll;
 }
