--- a/src/components/navigation/navigation.css
+++ b/src/components/navigation/navigation.css
@@ -1,5 +1,5 @@
 .navigation{
-    width: 18%;
+    width: 12%;
     height: 100%;
     border-radius: 0;
     padding: 10px;
@@ -7,4 +7,8 @@
     position: sticky;
     display: flex;
     flex-direction: column;
+}
+
+.navigation Link, Button{
+    width: 100%;
 }
