--- a/src/styles/createPost.css
+++ b/src/styles/createPost.css
@@ -65,3 +65,10 @@
 .load-file:active {
     background-color: #909090;
 }
+
+.Close{
+    position: absolute;
+    top: 0px;
+    width: 32px;
+    height: 32px;
+}
