--- a/src/styles/Area.css
+++ b/src/styles/Area.css
@@ -1,7 +1,3 @@
-.mat-Input{
-    width: 250px;
-}
-
 .mat-Button{
     width: 125px;
 }
@@ -10,17 +6,7 @@
     margin-top: 26px;
 }
 
-.icon{
-    width: 30px;
-}
-
-.auth-background{
-    display: flex;
-    flex-flow: column wrap;
-    align-items: center;
-    justify-content: center;
-}
-
+.auth-background,
 .auth-container{
     display: flex;
     flex-flow: column wrap;
